edited index instruction

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 
 <H1>Instructions</H1>
-<p>Use the A and D keys to move left and right and use the W key to jump! <br>Jump over the evil knight and use E to save the princess and bring her back to the castle
+<p>Use the A and D keys to skip to the left and right and the E key to shoot your magical tongue behind the cash register and into the kitchen to nab the precious fast food!
+<br>Better try and hurry to grab as much as you can because you have 2 minutes before you get caught!
 
 <h1>Comments</h1>
 <div id="disqus_thread"></div>
