edited game title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Project 4</title>
 </head>
 <body>
-<H1>Princess Rescue</H1>
+<H1>EAT ALL THE FOOD!</H1>
 <div id = "gameport" ></div>
 
 
